<resources>
    <string name="app_name">ScanPDA</string>
    <string name="login_text">Login</string>
    <string name="user_name_lable">UserName:</string>
    <string name="pwd_lable">Password:</string>
    <string name="btn_exit_text">Exit</string>
    <string name="network_error">Net work Error</string>
    <string name="login_data_error">No User or Password Error</string>
    <string name="receiving_group">Receiving Group</string>
    <string name="receipt_by_something_else">Receipt by something else</string>
    <string name="return_by_formnum">Return by form Num</string>
    <string name="quality_control">Quality control</string>
    <string name="receipt_return_by_formnum">Receipt or return by form Num</string>
    <string name="warehouse">Warehouse</string>
    <string name="receipt_by_boxnum">Receipt by box Num</string>
    <string name="boxnum_label">Box No.</string>
    <string name="snnum_label">SN No.</string>
    <string name="receipt_success">Receipt Success</string>
    <string name="receipt_unsuccess">Receipt Unsuccess</string>
    <string name="count_lable">Count:</string>
    <string name="local_server">rL</string>
    <string name="network_server">rN</string>
    <string name="test_server">rT</string>
    <string name="btn_help">Help</string>
    <string name="btn_confirm">Confirm</string>
    <string name="fromnum_label">Form No.</string>
    <string name="sku_tag">SKU</string>
    <string name="qty_tag">QTY</string>
    <string name="sn_tag">SN</string>
    <string name="receipt_by_formnum">Receipt by form Num</string>
    <string name="transfer_allocation">Transfer allocation</string>
    <string name="transfer_receipt">Transfer receipt</string>
    <string name="no_data_form">No data from this form</string>
    <string name="no_data_boxNum">No data from this box No.</string>
    <string name="boxnum_receipt_already">Already receipt of this box No.</string>
    <string name="server_location">Server location:</string>
    <string name="type_label">Type</string>
    <string name="receiving_group_receipt_unsuccess">Receiving group does not have this form number data.</string>
    <string name="purchase_receipt_unsuccess">Purchase does not have this form number data</string>
    <string name="warehouse_receipt_unsuccess">Warehouse does not have this form number data</string>
</resources>
